kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-k8s-application
  namespace: default
  labels:
    app: demo-k8s-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-k8s-application
  template:
    metadata:
      labels:
        app: demo-k8s-application
    spec:
      containers:
        - name: demo-k8s-application
          image: docker/getting-started
          ports:
            - containerPort: 80
