kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-k8s-application-pod
  namespace: default
  labels:
    app: demo-k8s-application
spec:
  containers:
    - name: demo-k8s-application
      image: docker/getting-started
      ports:
        - containerPort: 80
