kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-k8s-application-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: demo-k8s-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
